<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/title_bookmark"
            android:textAppearance="@style/TextAppearance.Octarine.Bold.Headline5"
            android:textColor="@color/pickled_bluewood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxSearch"
            style="@style/TextInputLayout.Login.Form.Outlined.Dense"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeColor="@drawable/bg_text_input_layout"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconDrawable="@drawable/ic_search_18dp"
            app:endIconMode="custom"
            app:endIconTint="@color/pickled_bluewood"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBookmark"
            app:placeholderText="@string/hint_search"
            app:placeholderTextAppearance="@style/TextAppearance.Octarine.Light.Body2"
            app:placeholderTextColor="@color/silver_chalice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLength="255"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.Octarine.Light.Caption"
                android:textColor="@color/silver_chalice" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boxSearch" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmptyBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_180sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boxSearch">

            <ImageView
                android:id="@+id/ivEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_empty_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/empty_data"
                android:textAppearance="@style/TextAppearance.Octarine.Bold.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivEmpty" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>